--- a/rubric_midterm.html
+++ b/rubric_midterm.html
@@ -9,10 +9,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Instructor: Edward L. Ionides" />
+<meta name="author" content="DATASCI/STATS 531" />
 
 
-<title>DATASCI/STATS 531/631 (Winter 2025)  ‘Modeling and Analysis of Time Series Data’</title>
+<title>Midterm project grading rubric</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -349,210 +349,159 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">DATASCI/STATS 531/631 (Winter 2025)
-<br>‘Modeling and Analysis of Time Series Data’</h1>
-<h4 class="author">Instructor: Edward L. Ionides</h4>
+<h1 class="title toc-ignore">Midterm project grading rubric</h1>
+<h4 class="author">DATASCI/STATS 531</h4>
 
 </div>
 
-<div id="TOC">
-<ul>
-<li><a href="#course-description" id="toc-course-description">Course
-description</a></li>
-<li><a href="#class-notes" id="toc-class-notes">Class notes</a></li>
-<li><a href="#homework-and-participation-assignments" id="toc-homework-and-participation-assignments">Homework and
-participation assignments</a></li>
-<li><a href="#midterm-project" id="toc-midterm-project">Midterm
-project</a></li>
-<li><a href="#acknowledgements-and-license" id="toc-acknowledgements-and-license">Acknowledgements and
-License</a></li>
-</ul>
-</div>
 
-<hr />
-<div id="course-description" class="section level2">
-<h2>Course description</h2>
-<p>This course gives an introduction to time series analysis using time
-domain methods and frequency domain methods. The goal is to acquire the
-theoretical and computational skills required to investigate data
-collected as a time series. The first half of the course will develop
-classical time series methodology, including auto-regressive moving
-average (ARMA) models, regression with ARMA errors, and estimation of
-the spectral density. The second half of the course will focus on state
-space model techniques for fitting structured dynamic models to time
-series data. We will progress from fitting linear, Gaussian dynamic
-models to fitting nonlinear models for which Monte Carlo methods are
-required. Examples will be drawn from ecology, economics, epidemiology,
-finance and elsewhere.</p>
-<p>Additional information is in the <a href="syllabus.html">syllabus</a>. Online discussion is on <a href="https://piazza.com/umich/winter2025/datascistats531">piazza</a>.</p>
-<p>631 includes a <a href="631.html">reading group</a> where we discuss
-a research paper each week. Students registering for 631 are expected to
-have taken at least one core PhD-level class such as STATS 600.</p>
-<hr />
-</div>
-<div id="class-notes" class="section level2">
-<h2>Class notes</h2>
+<p>The report will be graded on the following categories, based on the
+<a href="midterm_project/midterm_project_info.html">posted
+expectations</a>.</p>
 <ol style="list-style-type: decimal">
-<li><p><a href="01/index.html">Introduction</a></p></li>
-<li><p><a href="02/index.html">Estimating trend and
-autocovariance</a></p></li>
-<li><p><a href="03/index.html">Stationarity, white noise, and some basic
-time series models</a></p></li>
-<li><p><a href="04/index.html">Linear time series models and the algebra
-of ARMA models</a></p></li>
-<li><p><a href="05/index.html">Parameter estimation and model
-identification for ARMA models</a></p></li>
+<li><p>Communicating your data analysis. [10 points]</p>
+<ul>
+<li><p>1A. Raising a question. You should explain some background to the
+data you chose, and give motivation for the reader to appreciate the
+purpose of your data analysis. <br> <span style="color: blue;"> [4]
+Unusually strong, an engaging introduction to an original question. <br>
+[3] coherent and well-written. <br> [2] too brief or too close to a
+single source. <br> [1] not carried out to Masters level expectations;
+</span></p></li>
+<li><p>1B. Reaching a conclusion. You should say what you have concluded
+about your question(s). <br> <span style="color: blue;"> [4] Clearly
+written conclusions; matches the results; contributes in the context of
+the motivation. <br> [3] coherent and well-written. <br> [2] too brief,
+or with a substantial logical flaw. <br> [1] not carried out to Masters
+level expectations. </span></p></li>
+<li><p>1C. Communication style. Material should be presented in a way
+that helps the reader to appreciate the contribution of the project.
+Code and computer output are included only if they are pertinent to the
+discussion. Usually, code remains in the source file, and numerical
+results are presented in tables or graphs or text, rather than raw
+computer output. <br> <span style="color: blue;"> [2] Consideration give
+to communication, attention give to axis labels and scales, decisions on
+when and whether to present code or raw computer output. <br> [1]
+Repeatedly breaks usual standards for effective communication <br> [0]
+Written substantially below Masters level expectations. <br> Since this
+item was not listed in the original list of expectations, it is being
+graded borrowing points from the methodology expectation, “Value the
+reader’s time: you may lose points for including material that is of
+borderline relevance, or that is not adequately explained and
+motivated.” </span></p></li>
+<li><p>1D. You will submit your source code, but you should not expect
+the reader to study it. If the reader has to study the source code, your
+report probably has not explained well enough what you were doing. <br>
+<span style="color: blue;"> These recommendations are considered as part
+of communication style, and/or scholarship, and are not allocated any
+points here. </span></p></li>
+</ul></li>
+<li><p>Statistical methodology. [10 points]</p>
+<ul>
+<li><p>2A. Justify your choices for the statistical methodology. <br>
+<span style="color: blue;"> [3] All relevant methods covered in the
+course are appropriately applied; consideration is given to whether they
+are adequate for the task. <br> [2] A range of methods is applied, but
+appropriate methods are omitted; methods to explore limitations or
+weaknesses of models are not adequately explored. <br> [1] The range of
+methods demonstrated does not reach Masters level expectations. <br>
+There are no points specifically for investigating methods not covered
+in the class, but considering alternative approaches can be an effective
+approach to assessing the strengths and limitations of the methods we do
+cover. <br> </span></p></li>
+<li><p>2B. The models and methods you use should be fully explained,
+either by references or within your report. <br> <span style="color: blue;"> [4] The report is careful to define notation and
+explicitly write out central model(s); a reasonable balance between
+describing methods used and defering to references. <br> [3] High
+quality of presentation of models and methods, but with non-trivial room
+for improvement. <br> [2] Over-dependent on undefined notation, using
+computer code as mathematical notation, out-sourcing details to
+references, or failing to give a reasonably precise model definition.
+<br> [1] Technical description of methodology written substantially
+below Masters level expectations. </span></p></li>
+<li><p>2C. Correctness. Obviously, we aim to avoid errors in the math we
+present, our code, or the reasoning used to draw conclusions from
+results. Being self-critical and paying attention to detail can help
+here. <br> <span style="color: blue;"> [3] A reasonably range of methods
+and results is correctly reported. <br> [2] A substantial error,
+multiple minor errors, or limited scope of project giving limited
+ability to asses this (a project that avoids details of models and
+methods cannot show accuracy in doing this). <br> [1] Accuracy
+substantially below expectations for Masters level, or very limited
+scope of project giving no ability to assess this. <br> [0] Multiple
+errors, some of which affect conclusions, without evidence of effort to
+assess plausibility of results. <br> Note: errors may have consequences
+for other grading categories as well. </span></p></li>
+<li><p>2D. Focus on a few, carefully explained and justified, figures,
+tables, statistics and hypothesis tests. You may want to try many
+things, but only write up evidence supporting how the data help you to
+get from your question to your conclusions. Value the reader’s time: you
+may lose points for including material that is of borderline relevance,
+or that is not adequately explained and motivated. <br> <span style="color: blue;"> Credit for this is awarded in the communication
+category. </span></p></li>
+</ul></li>
+<li><p>Scholarship. [10 points]</p>
+<ul>
+<li><p>3A. Your report should make references where appropriate. For a
+well-written report the citations should be clearly linked to the
+material. The reader should not have to do detective work to figure out
+what assertion is linked to what reference. When using a reference to
+point the reader to descriptions elsewhere, you should provide a brief
+summary in your own report to make it self-contained. <br> <span style="color: blue;"> </span> <span style="color: blue;"> [4] Citations
+and references carried out to a high standard; (a) references clearly
+linked to the assertion they support; (b) material summarized in the
+report so that the reader does not have to go to the reference to
+understand the main thread of the report; (c) a thoughtful range of
+references that put the project report in a broader context. <br> [3]
+Good use of references, with room for improvement in one of (a,b,c).
+<br> [2] A reasonable effort at careful citation, but with substantial
+room for improvement. <br> [1] Citation standards not meeting
+expectations for a Masters level midterm project. <br> Note: Writing a
+project involves assessing what can be taken for granted. When is it
+appropriate to use without explanation the notation from a textbook (by
+reference, without summarizing the definition) or the notes? A good
+report defines when appropriate. We do not expect to go back to the
+axioms of mathematics whenever we write a math statement! Projects
+should spend some reasonable amount of time defining things,
+strengthened by references that give extra details. </span></p></li>
+<li><p>3B. Your report should be placed in the context of previous
+DATASCI/STATS 531 projects and the posted peer review. Note that peer
+review is available for previous projects from 2021 onward. <br> <span style="color: blue;"> </span> <span style="color: blue;"> [3] It is
+clear what the group worked out by themselves and what they learned from
+previous projects and peer review. A reasonable amount of effort has
+been put into learning as much as possible from previous projects and
+peer review. <br> [0-2] Losing one point for each of (i) missing
+references to previous projects; (ii) missing references to previous
+peer review; (iii) failing to find relevant material in previous
+projects. </span></p></li>
+<li><p>3C. You should properly acknowledge any sources (people or
+documents or internet sites) that contributed to your project. If you
+address a question related to a previous project, you should put your
+contribution in the context of the previous work and explain how your
+approach varies or extends the previous work. It is especially important
+that this is clearly explained: substantial points will be lost if the
+reader has to carry out detective work to figure out clearly the
+relationship to a previous project. <br> <span style="color: blue;"> [2]
+It is expected that the report is written to a high ethical standard, in
+which case you should get full credit for this. <br> [0-1] Mild
+violations of expectations for responsible scholarship (such as clearly
+attibuting a statement to a source, but failing to quote the material if
+it is copied verbatim) may be handled by reduced points for this
+section; major violations will be dealt with on a case-by-case basis.
+</span></p></li>
+<li><p>3D. Contributions of group members. Your report should explain
+clearly how work was divided among members of the group. Usually, there
+should be a short section explaining how the group operated. <br> <span style="color: blue;"> [2] A reasonable explanation of a functional group
+operating procedure, where each individual makes at least one identified
+contribution while also collaborating as a team. This is usually
+automatically satisfied for an individual project. <br> [1] Some cause
+for concern with effective group operation. <br> [0] Missing statement,
+or evidence of a dysfunctional group. For a dysfunctional group, action
+may be taken to adjust scores to reflect individual contributions, but
+otherwise all members of a group receive the same score.
+</span></p></li>
+</ul></li>
 </ol>
-<!--
-
-6. [Extending the ARMA model: Seasonality, integration and trend](06/index.html)
-
-7. [Introduction to time series analysis in the frequency domain](07/index.html)
-
-8. [Smoothing in the time and frequency domains](08/index.html)
-
-9. [Case study: An association between unemployment and mortality?](09/index.html)
-
-10. [Introduction to partially observed Markov process models](10/index.html)
-
-11. [Introduction to simulation-based inference for epidemiological dynamics via the pomp R package](11/index.html)
-
-12. [Simulation of stochastic dynamic models](12/index.html)
-
-13. [Likelihood for POMP models: Theory and practice](13/index.html)
-
-14. [Likelihood maximization for POMP models](14/index.html)
-
-15. [A case study of polio including covariates, seasonality & over-dispersion](15/index.html)
-
-16. [A case study of financial volatility and a POMP model with observations driving latent dynamics](16/index.html). With [notes on how to run the code on the Great Lakes Linux cluster](16/README.html).
-
-17. [A case study of measles: Dynamics revealed in long time series](17/index.html)
-
-18. [A case study of ebola: Model criticism and forecasting](18/index.html)
-
--->
-<!--
-
-There are further POMP case studies, in a similar style, on [Ebola modeling](https://kingaa.github.io/sbied/ebola/index.html), [measles transmission](https://kingaa.github.io/sbied/measles/index.html), and [dynamic variation in the rate of human sexual contacts](https://kingaa.github.io/sbied/contacts/index.html).
-
---------
-
--->
-</div>
-<div id="homework-and-participation-assignments" class="section level2">
-<h2>Homework and participation assignments</h2>
-<ul>
-<li><p><a href="hw00/hw00.html">Homework 0</a>. Some course preparation.
-Nothing to submit.</p></li>
-<li><p><a href="hw01/hw01.html">Homework 1</a>, due Sun Jan 19, 11:59pm.
-<a href="hw01/sol01.html">Solution</a>.</p></li>
-<li><p><a href="hw02/hw02.html">Homework 2</a>, due Tue Jan 28, 11:59pm.
-<!--
-[Solution](hw02/sol02.html).
---></p></li>
-<li><p><a href="participation/participation1.html">Piazza participation
-1</a>, due Tue Jan 28, 11:59pm.</p></li>
-<li><p><a href="hw03/hw03.html">Homework 3</a>, due Sun Feb 9,
-11:59pm.</p></li>
-</ul>
-<!--
-[Solution](hw03/sol03.html).
-
-* [Participation 3](participation/participation3.html), due Sun Feb 11, 11:59pm.
-
-* [Homework 4](hw04/hw04.html), due Sun Feb 18, 11:59pm.
-[Solution](hw04/sol04.html).
-
-* [Participation 4](participation/participation4.html), due Sun Feb 18, 11:59pm.
-
-* [Homework 5](hw05/hw05.html), due Sun Mar 17, 11:59pm.
-[Solution](hw05/sol05.html).
-
-* [Participation 5](participation/participation5.html), due Sun Mar 17, 11:59pm.
-
-
-* [Homework 6](hw06/hw06.html), due Sun Mar 24, 11:59pm. 
-[Solution](hw06/sol06.html).
-
-* [Participation 6](participation/participation6.html), due Sun Mar 24, 11:59pm.
-
-* [Homework 7](hw07/hw07.html), due Sun Mar 31, 11:59pm. Extended to Wed Apr 3.
-[Solution](hw07/sol07.html).
-
-
-* [Participation 7](participation/participation7.html), due Sun Mar 31, 11:59pm. Extended to Wed Apr 3.
-
-
-* [Homework 8](hw08/hw08.pdf), due Sun Apr 14, 11:59pm.
-[Solution](hw08/sol08.pdf).
-
-* [Participation 8](participation/participation8.html), due Sun Apr 14, 11:59pm.
-
--->
-<!--
-
-* There is no assigned homework for the last two weeks of the semester. You should work on your final project. The remaining lectures contain material that will be useful for your final projects.
-
--------------------
-
--->
-</div>
-<div id="midterm-project" class="section level2">
-<h2>Midterm project</h2>
-<ul>
-<li><a href="midterm_project/midterm_project_info.html">Information</a>.</li>
-</ul>
-<!--
-* [Midterm peer review report instructions](midterm_project/midterm_review.html)
-
-* [2024 midterm projects](midterm_project/index.html)
-
-* You are welcome to browse previous midterm projects. The [2022 midterm projects](http://ionides.github.io/531w22/midterm_project/) and  [2021 midterm projects](http://ionides.github.io/531w21/midterm_project/) have a posted summary of peer review comments. Earlier projects are also available, from [2016](http://ionides.github.io/531w16/midterm_project/), [2018](http://ionides.github.io/531w18/midterm_project/) and [2020](http://ionides.github.io/531w20/midterm_project/).
-
-
--------------
-
--->
-<!--
-
-## Final project
-
-
-* [Information](final_project/final_project_info.html)
-
-* [Final peer review report instructions](final_project/final_review.html)
-
-* [2024 final projects](final_project/index.html)
-
-* You're welcome to browse previous final projects. The [2021](http://ionides.github.io/531w21/final_project/) and  [2022](http://ionides.github.io/531w22/final_project/)  final projects have a posted summary of peer review comments. Earlier projects from [2016](http://ionides.github.io/531w16/final_project/), [2018](http://ionides.github.io/531w18/final_project/), [2020](http://ionides.github.io/531w20/final_project/) may also be useful.
-
-If building on old source code, note that there are some differences between versions of the software package **pomp**. The [**pomp** version 2 upgrade guide](https://kingaa.github.io/pomp/vignettes/upgrade_guide.html) can be helpful. There are various smaller changes between **pomp 2.0** and the current **pomp 5.6**.
-
---------
-
-## Using the Great Lakes cluster
-
-* Great Lakes access will be set up after the midterm project and used for the second half of the course.
-
-* [Introductory notes](greatlakes/index.html) for using our class account on the greatlakes cluster. This is optional but may be helpful for your final project.
-
-* If you are already familiar with using R on Great Lakes, all you need to know is the class account: ```stats531w24_class```.
-
-* You are expected to use our class account only for computations related to DATASCI/STATS 531.
-
-* Please share knowledge about cluster computing between group members, and/or on piazza, to help everyone who wants to learn these skills.
-
-* Cluster-related questions can also be emailed to arc-support@umich.edu.
-
----------
-
--->
-</div>
-<div id="acknowledgements-and-license" class="section level2">
-<h2>Acknowledgements and License</h2>
-<p>This course and the code involved are made available with an <a href="LICENSE">Creative Commons</a>. A list of acknowledgments is <a href="acknowledge.html">available</a>.</p>
-</div>
 
 
 
