--- a/midterm_project/index.html
+++ b/midterm_project/index.html
@@ -373,8 +373,8 @@ Delays</a></td>
 <td></td>
 </tr>
 <tr class="even">
-<td align="left">2. <a href="project02/blinded.html">U.S. Airline Trafic
-Analysis</a></td>
+<td align="left">2. <a href="project02/blinded.html">U.S. Airline
+Traffic Analysis</a></td>
 <td align="left"></td>
 <td></td>
 </tr>
