--- a/final_project/final_review.html
+++ b/final_project/final_review.html
@@ -374,23 +374,20 @@ projects you are refereeing via Canvas. Let me know if you do not.</p>
 <p>Please submit your review report as a pdf file on Canvas, by Wed
 4/30, 11:59pm. The reviews will not be posted publicly, and those who
 wrote the project should remain blind to your identity. Please do not
-unblind yourself. It is up to you whether to investigate the identity of
-the people you are reviewing for. My understanding is that Canvas cannot
-guarantee “double blind” reviewing, but it is helpful if possible to
-maintain a “single blind” protocol where the referee is anonymous to the
-reviewers. Please do not question others on which reports they are
+unblind yourself, and do not question others on which reports they are
 reviewing. In other words, treat this process with the same respect
 expected of professional academic peer review. It is not a major problem
 if you discover who reviews your work, but the review process works well
 under anonymity. Each report should identify the main strengths and
 weaknesses of the project (from both technical and conceptual
 perspectives) as well as identifying points with room for improvement.
-It is appropriate for your report to include comments on coding
-decisions and reproducibility. The expected length of the report is at
-least 500 words. Your report can be shorter if you find the project is
-so strong that there is not much criticism to find, but it is unusual
-that a careful reading cannot find any technical weaknesses or
-substantial room for improvement.</p>
+The Rmd file and other source files are available on the class GitHub
+repository, and it is appropriate for your report to include comments on
+coding decisions and reproducibility. The expected length of each report
+is at least 500 words. Your report can be shorter if you find the
+project is so strong that there is not much criticism to find, but it is
+unusual that a careful reading cannot find any technical weaknesses or
+substantial room for improvement</p>
 <hr />
 
 
