--- a/final_project/project10/comments.html
+++ b/final_project/project10/comments.html
@@ -361,22 +361,22 @@ the conclusions)</h3>
 <ul>
 <li><p>A mechanistic model is developed and compared with
 non-mechanistic benchmarks (ARMA and plain regression). The mechanistic
-model falls quite a long way short of the behcnmarks, indicating
+model falls quite a long way short of the benchmarks, indicating
 problems with the model that there was insufficient time to fix. That is
 appropriate progress for a time series final project. It would have been
 nice to see more diagnostic plots to explore why the proposed dynamic
 model structure is not (yet) fitting well, for example, looking at the
 likelihood anomalies as in Chapter 18 (the measles case study)</p></li>
-<li><p>The decreasing log-liklihood with iteration is an indication of
+<li><p>The decreasing log-likelihood with iteration is an indication of
 model misspecification. The proposed solution to use more particles or
 reduce random walk step size will not help - the problem is exactly that
 as the random walk step size reduces the model no longer fits so
 well.</p></li>
 <li><p>The report does not place the project securely into the context
-of other 531 projects (or a broader literature, but that is beyond
-expectatations for a final project). The topic is original, but the
-report should say this and the team should say what they learned from
-previous projects, as requested in the assignment description.</p></li>
+of other 531 projects (or a broader literature). The topic is original,
+but the report should say this and the team should say what they learned
+from previous projects, as requested in the assignment
+description.</p></li>
 </ul>
 </div>
 <div id="minor-points-strengths-or-weaknesses-or-errors-or-potential-improvements" class="section level3">
